--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  dio: ^4.0.6
+  http: ^0.13.4
+  url_launcher: ^6.1.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
